--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hu.blackbelt.judo</groupId>
@@ -50,9 +49,9 @@
 
         <log4j.configuration>log4j.properties</log4j.configuration>
 
-        <judo-dao-api-version>1.0.0.20200228_205257_ff7b104_develop</judo-dao-api-version>
-        <judo-dispatcher-api-version>1.0.0.20200220_093445_2d714d1_develop</judo-dispatcher-api-version>
-        <judo-meta-asm-version>1.0.0.20200312_085852_14b61ba_develop</judo-meta-asm-version>
+        <judo-dao-api-version>1.0.1</judo-dao-api-version>
+        <judo-dispatcher-api-version>1.0.1</judo-dispatcher-api-version>
+        <judo-meta-asm-version>1.1.0.20200702_130733_7926a0b_develop</judo-meta-asm-version>
     </properties>
 
     <url>http://github.com/${project-repositoryId}</url>
