--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <log4j.configuration>log4j.properties</log4j.configuration>
 
         <judo-dao-api-version>1.0.1</judo-dao-api-version>
-        <judo-dispatcher-api-version>1.0.1</judo-dispatcher-api-version>
+        <judo-dispatcher-api-version>1.0.2.20200709_172739_726a3b9_develop</judo-dispatcher-api-version>
         <judo-meta-asm-version>1.1.0.20200716_154215_68ace55_develop</judo-meta-asm-version>
     </properties>
 
