--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
         <url>http://github.com/${project-repositoryId}</url>
     </scm>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://opensource.org/licenses/Apache-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
     <dependencies>
 
         <dependency>
@@ -490,7 +498,7 @@
                     <plugin>
                         <groupId>de.jutzig</groupId>
                         <artifactId>github-release-plugin</artifactId>
-                        <version>1.3.0</version>
+                        <version>1.4.0</version>
                         <inherited>false</inherited>
                         <configuration>
                             <repositoryId>${project-repositoryId}</repositoryId>
