--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <log4j.configuration>log4j.properties</log4j.configuration>
 
         <judo-dao-api-version>1.0.2.20210223_122846_195d971_develop</judo-dao-api-version>
-        <judo-dispatcher-api-version>1.0.2-SNAPSHOT</judo-dispatcher-api-version>
+        <judo-dispatcher-api-version>1.0.2.20210226_181700_a9b5c54_feature_JNG_2532_support_asString</judo-dispatcher-api-version>
         <judo-meta-asm-version>1.1.0.20210222_023933_c11700f_develop</judo-meta-asm-version>
     </properties>
 
