--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
         <judo-dao-api-version>1.0.2.20220901_121014_d87d7719_develop</judo-dao-api-version>
         <judo-dispatcher-api-version>1.0.2.20220901_121018_b6e9cf92_develop</judo-dispatcher-api-version>
-        <judo-meta-asm-version>1.1.0.20220901_121048_5b18a69d_develop</judo-meta-asm-version>
+        <judo-meta-asm-version>1.1.1</judo-meta-asm-version>
     </properties>
 
     <url>http://github.com/${project-repositoryId}</url>
