--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@
         <lombok-version>1.18.24</lombok-version>
         <osgi-ds-version>1.3.0</osgi-ds-version>
 
-        <judo-dao-api-version>1.0.4.20230309_120321_78415dc0_develop</judo-dao-api-version>
-        <judo-dispatcher-api-version>1.0.2</judo-dispatcher-api-version>
-        <judo-meta-asm-version>1.1.4.20230815_122310_313f093f_develop</judo-meta-asm-version>
+        <judo-dao-api-version>1.0.4.20230816_005552_d52abedd_develop</judo-dao-api-version>
+        <judo-dispatcher-api-version>1.0.3.20230816_005635_543fe3d7_develop</judo-dispatcher-api-version>
+        <judo-meta-asm-version>1.1.4.20230816_013651_48cffd4d_develop</judo-meta-asm-version>
 
         <!--suppress UnresolvedMavenProperty -->
         <logback-test-config>${maven.multiModuleProjectDirectory}/logback-test.xml</logback-test-config>
